version 0.85.01
	RAD10 compilation (thx FrankBijnen)
	Exposure mode conversion bugfix (thx blemasle)
	Testing status reader for KP
	Settings reading for K5II (thx blemasle)
	remote_bulb_mode_press_press setting (thx blemasle)
	Updating lens info database ( exiftool 11.99 )
	Testing support for 645Z

version 0.85.00 ( 2019-JAN-27 )
	K-1 battery fields fix
	K-70: read one push bracketing field
	Using one push bracketing field in command line
	Print out command line in debug mode
	K-70 bulb mode bugfix
	--settings
	K-1 bulb mode bugfix (testing)
	--dangerous no longer required for K-70
	bulb_mode setting reading for K-70, K-50, K-01
	better handling of unknown and n/a settings
	K-x settings parser (very simple)
	Checking both both /dev/block and /dev
	Android: using gradle instead of ant
	Android: nicer image download indicator
	GUI ISO table bugfix
	Updating lens info database ( exiftool 10.70 )
	Android: better support of landscape mode
	GTK code cleanup
	Requires at least gtk+ 2.18
	GTK status info/status hex bugfix
	Using command 0x02 0x00 for buffer mask (K-70, K-3II)
	Possibility to specify stdout as output file using -
	Default mode prints out status info instead of taking a picture
	using_aperture_ring setting reading for K-70
	shake_reduction setting reading for K-70
	astrotracer setting reading for K70, K-3II
	horizon_correction setting reading for K-70
	astrotracer timer sec setting reading for K-3II
	K-3II bulb mode bugfix (testing)
	Restore bulb_timer, astrotracer fields after bulb
	CLI: Support for single buffer mode mode (K-70)
	GUI: Settings info
	GUI: Support for single buffer mode mode (K-70)
	Testing support for KP
	K-70 GUI image save bugfixes
	Android: Better error message if root access is missing.
	GUI ISO table simplification
	GUI Preview image bugfix
	Filename extension bugfixes
	Avoid double unrecognized option error message
	Show error message if servermode is specified in Windows
	Human readable selected/focused af point (for 11 AF points)