@@ -1,5 +1,6 @@
 /old_releases
-*.o
+*.o*
+*.a
 /pktriggercord
 /pktriggercord-cli
 *~
